--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ description: > # Multiline description..
 
 # Uncomment 'baseurl' and 'url' when deploy..
 baseurl: "/arabic"
-url: "http://www.syahmifauzi.com"
+url: "https://www.syahmifauzi.com"
 local: "http://localhost:3000"
 
 facebook_username: syahmifauzi97
